--- a/index.html
+++ b/index.html
@@ -12,4 +12,9 @@
     <div id="app"></div>
     <script type="module" src="/src/main.js"></script>
   </body>
+  <style>
+    body {
+      margin: 0;
+    }
+  </style>
 </html>
