--- a/index.html
+++ b/index.html
@@ -15,6 +15,10 @@
   <style>
     body {
       margin: 0;
+      height: 100vh;
+    }
+    #app {
+      height: inherit;
     }
   </style>
 </html>
